--- a/Proyectos_Hackathon/Pa10/Glass/model/model_pneumonia.ipynb
+++ b/Proyectos_Hackathon/Pa10/Glass/model/model_pneumonia.ipynb
@@ -1,7 +1,12 @@
 {
  "cells": [
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-12-18T17:51:55.757065Z",
+     "start_time": "2025-12-18T17:51:55.748891Z"
+    }
+   },
    "cell_type": "code",
    "source": [
     "from tensorflow.keras.preprocessing.image import ImageDataGenerator\n",
@@ -14,7 +19,7 @@
    ],
    "id": "1f885078449bbf35",
    "outputs": [],
-   "execution_count": null
+   "execution_count": 3
   },
   {
    "metadata": {},
@@ -132,10 +137,10 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "source": "",
-   "id": "e18e17e263c3e44c",
    "outputs": [],
-   "execution_count": null
+   "execution_count": null,
+   "source": "model.save(\"model_pneumonia.keras\")",
+   "id": "49e7b38d8216ec28"
   }
  ],
  "metadata": {
